--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Tim Daubenschütz <tim@daubenschuetz.de> (https://timdaub.github.io/)",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "date-fns": "2.19.0",
     "ya-csv": "1.0.0"
   }
 }
