--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "date-fns": "2.19.0",
+    "moneysafe": "2.2.1",
     "ya-csv": "1.0.0"
   }
 }
