--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "devDependencies": {
     "ava": "3.15.0"
   },
-  "name": "cryptotaxtools",
+  "bin": {
+    "taxtool": "./src/cli.mjs"
+  },
+  "name": "taxtool",
   "description": "ctt is a tool that can help you file your crypto currency taxes.",
   "version": "0.0.1",
   "main": "./src/index.mjs",
@@ -24,6 +27,7 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "date-fns": "2.19.0",
+    "meow": "9.0.0",
     "moneysafe": "2.2.1",
     "ya-csv": "1.0.0"
   }
