--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "taxtool": "./src/cli.mjs"
   },
   "name": "taxtool",
-  "description": "ctt is a tool that can help you file your crypto currency taxes.",
-  "version": "0.1.0",
+  "description": "taxtool can help you file your crypto currency taxes.",
+  "version": "0.2.0",
   "main": "./src/index.mjs",
   "directories": {
     "test": "test"
